# riverdb

./: .gitignore  Cargo.toml  LICENSE.md  README.md
.github/workflows/: coverage.yml  tests.yml
ops/ci/: conf.sh
src/: lib.rs  main.rs  testsetup.sql
src/riverdb/: mod.rs  plugins.rs  worker.rs
src/riverdb/common/: ark.rs  atomic_arc.rs  atomic_cell.rs  atomic_ref.rs  atomic_refcell.rs  bytes.rs  coarse_clock.rs  errors.rs  math.rs  maybe_tls.rs  mod.rs  spsc.rs  utf8.rs  util.rs  version.rs
src/riverdb/config/: config.rs  enums.rs  load.rs  mod.rs  postgres.rs
src/riverdb/http/: service.rs
src/riverdb/pg/: backend.rs  backend_state.rs  client.rs  client_state.rs  cluster.rs  connection.rs  group.rs  isolation.rs  message_stream.rs  mod.rs  pool.rs  rows.rs  service.rs  session.rs  transaction.rs
src/riverdb/pg/plugins/: mod.rs  plugins.rs
src/riverdb/pg/protocol/: auth_md5.rs  auth_type.rs  error_codes.rs  errors.rs  message.rs  message_builder.rs  message_error.rs  message_error_builder.rs  message_parser.rs  message_reader.rs  messages.rs  mod.rs  parser.rs  row_description.rs  sasl.rs  server_params.rs  startup_params.rs  tag.rs
src/riverdb/pg/sql/: escape.rs  mod.rs  normalize.rs  queries.rs  query.rs  query_type.rs
src/riverdb/pool/: cluster.rs  group.rs  mod.rs
src/riverdb/server/: certificate_verifier.rs  connections.rs  listener.rs  mod.rs  transport.rs  transport_stream.rs  transport_tls.rs
src/tests/: backend_auth_test.rs  client_auth_test.rs  common.rs  mod.rs  normalize_test.rs  proxy_queries_test.rs  proxy_transactions_test.rs  testsetup.sql  tls_test.rs
tests/: snakeoil.der  tls_client_test.rs  tls_server_test.rs  tls_test.rs
tests/common/: mod.rs
tests/testdata/test-ca/: readme.txt
