[package]
name = "riverdb"
version = "0.1.0"
authors = ["Eloff <dan.eloff@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"


[dependencies]
tokio = { version = "1.5.0", features = ["full"] }
tokio-util = { version = "0.6.7", features = ["codec"] }
tokio-stream = "0.1.6"
rustls = { git = "https://github.com/ctz/rustls.git", rev = "98d087e7939f5c098a80b0e0f21982c050a053cd", features = ["dangerous_configuration"] } # switch this back to cargo after 0.2.0 release
rustls-pemfile = "0.2.1"
futures = "0.3.15"
fnv = "1.0.7"
chrono = { version = "0.4.19", features = ["serde"] }
serde = { version = "1.0.125", features = ["derive"] }
serde_yaml = { version = "0.8.17" }
async-trait = "0.1.50"
bytes = "1.0.1"
tracing = { version = "0.1.26", features = ["max_level_trace", "release_max_level_info"] }
tracing-subscriber = { version = "0.2.18", default-features = false, features = ["fmt", "ansi", "env-filter", "chrono", "tracing-log"] }
num_cpus = "1.13.0"
libc = "0.2.97"
enum-display-derive = "0.1.1"
custom_error = "1.9.2"