[package]
name = "riverdb"
version = "0.1.0"
authors = ["Eloff <dan.eloff@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
main = []

[lib]
doctest = false

[profile.dev]
panic = "abort"
features = ["main"]

[dependencies]
tokio = { version = "1.5.0", features = ["full"] }
#tokio-util = { version = "0.6.7", features = ["codec"] }
#tokio-stream = "0.1.6"
rustls = { git = "https://github.com/eloff/rustls.git", rev = "9bddb4e", features = ["dangerous_configuration"] } # switch this back to cargo after 0.2.0 release
rustls-pemfile = "0.2.1"
webpki-roots = "0.22.0"
futures = "0.3.15"
fnv = "1.0.7"
rust-crypto = "0.2.36"
chrono = { version = "0.4.19", features = ["serde"] }
serde = { version = "1.0.125", features = ["derive"] }
serde_yaml = { version = "0.8.17" }
bytes = "1.0.1"
tracing = { version = "0.1.26", features = ["max_level_trace", "release_max_level_info"] }
tracing-subscriber = { version = "0.2.18", default-features = false, features = ["fmt", "ansi", "env-filter", "chrono", "tracing-log"] }
num_cpus = "1.13.0"
libc = "0.2.97"
strum = { version = "0.21.0", features = ["derive"] }
custom_error = "1.9.2"
memchr = { version = "2.4.0", features = ["libc"] } # We use libc anyway, so may as well use libc memchr
regex = "1.5.4"
ctor = "0.1.20"
gensym = "0.1.0"
rand = "0.8.4"
nanorand = { version = "0.6.0", features = ["std", "wyrand"] }
base64 = "0.13.0"
hex = "0.4.3"
stringprep = "0.1.2"
memmem = "0.1.1"

[dev-dependencies]
env_logger = "0.8.4" # required by test-env-log
test-env-log = { version = "0.2.7", features = ["trace"] } # configure tracing in tests from env variables
serial_test = "0.5.1"